--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Welcome to Github Demo</h1>
     <button>Click</button>
+    <form>
+        <label for="name">ENter Your Name : </label>
+        <input id="name" name="name" type="text">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
