added a footer section

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
         <input id="name" name="name" type="text">
         <input type="submit" value="Submit">
     </form>
+
+    <footer>
+        This is a footer
+    </footer>
 </body>
 </html>
