--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <input id="name" name="name" type="text">
         <input type="submit" value="Submit">
     </form>
+
+    <section>
+        This is a mini about us.
+    </section>
+
 </body>
 </html>
